# jlufsd_2021

./: README.md
auto_msgs/: CMakeLists.txt  package.xml
auto_msgs/action/: CheckForObjects.action
auto_msgs/msg/: BoundingBox.msg  CarState.msg  Cone.msg  ConeDetections.msg  Map.msg  auto_ctr.msg  can_msg.msg  can_sig.msg  chassis.msg  control_cmd.msg  localizition.msg  planning.msg  planning_point.msg  sensor_gps.msg
auto_msgs/src/: test.cpp
can/: CMakeLists.txt  NAVconfig.dbc  car_inf.dbc  package.xml
can/cfg/: test_ui.cfg
can/config/: can_main.yaml  navi.yaml  navi_u_turn.yaml  navi_yifulou_sican.yaml
can/config/can_tools_config/: can_node.yaml  esd_can1.yaml  socket_can0.yaml  socket_can1.yaml
can/config/chassis_yaml/: qirui_eq_chassis.yaml
can/config/esd_can_config/: esd_can0.yaml  esd_can2.yaml
can/dbcs/: CAN1_CHASIS_CAN.DBC  CAN3_SVBandCDS_CAN.DBC  CAN3_SVBandCDS_CAN_WITH_CDS_FB.dbc  CAN4_EXT_CAN_20181218.dbc  EPS_CAN_20140625.dbc  FAW_HSEV1_Extension_IFC_CANDBC_V3.2.dbc  xwt.dbc
can/include/can/: can_config_data_path.h  can_config_data_path.h.in  can_pool.hpp  geodetic_conv.hpp  print_can_msg.h
can/src/can_main/: CMakeLists.txt  main_can.cpp
can/src/can_node/: CMakeLists.txt  can_node_base.cpp  can_node_qirui_eq.cpp  can_tester_node.cpp
can/src/can_node/include/: can_node_base.h  can_node_factory.hpp  can_node_qirui_eq.h  can_tester_node.h
can/src/can_tools/: CMakeLists.txt  can2ros_and_csv_node.cpp  can_dbc_test.cpp  enu_ref_point.cpp  real_time_record.cpp  resample_realtime_rec.cpp
can/src/can_tools/include/: can2ros_and_csv_node.h
can/src/drivers_interface/: CMakeLists.txt  esd_can_channel.cpp  socket_can_channel.cpp
can/src/drivers_interface/include/: base_can_channel.hpp  base_can_dev.hpp  esd_can_channel.hpp  socket_can_channel.hpp
can/src/drivers_interface/test/: test_chassis_loc.cpp  test_esd.cpp  test_esd_can_channel.cpp  test_socket_can.cpp
common_tool/: CMakeLists.txt  package.xml
common_tool/iir_filter/: CMakeLists.txt
common_tool/iir_filter/test/: CMakeLists.txt  butterworth.cpp  butterworth_test_data.cpp  test_iir_data_path.h  test_iir_data_path.h.in
common_tool/iir_filter/test/test_data/: f_angle.csv
common_tool/include/: auto_ros_base_path.h  auto_ros_base_path.h.in
common_tool/include/common_tool/: angle_helper.h  clampPid.h  coordinate_trans.h  csv_writer.h  factory.h  geometry.hpp  interpolation_1d.h  interpolation_2d.h  matplotlibcpp.hpp  path.h  proto_file.h  std_map_utility.h  watchDog.h
common_tool/math/: clamp.hpp  eigen_to_std_vector.hpp  eliminate_range.hpp  sign.hpp  std_vector_to_eigen.hpp
common_tool/src/: clampPid.cpp  coordinate_trans.cpp  interpolation_1d.cpp  interpolation_2d.cpp  path.cpp  proto_file copy.cc  proto_file.cc  test.cpp  watchDog.cpp
common_tool/test/: 4d4s_ref.csv  factory_test.cpp  map_test.yaml  test_csv.cpp  test_data_path.h  test_data_path.h.in  test_geometry.cpp  test_interpolation.cpp  test_mlinterp.cpp
common_tool/time/include/: auto_ros_time.h
darknet_ros-fix-pubrate/darknet/: Makefile
darknet_ros-fix-pubrate/darknet_ros/: CMakeLists.txt
darknet_ros-fix-pubrate/darknet_ros/config/: ros.yaml  yolov3-cone.yaml
darknet_ros-fix-pubrate/darknet_ros/launch/: darknet_ros.launch  yolo_v3.launch
darknet_ros-fix-pubrate/darknet_ros/src/: YoloObjectDetector.cpp
darknet_ros-fix-pubrate/darknet_ros/test/: ObjectDetection.cpp
darknet_ros-fix-pubrate/darknet_ros_msgs/: CMakeLists.txt
lidar_perception/: CMakeLists.txt  package.xml  start.sh
lidar_perception/config/: param.yaml
lidar_perception/include/: pcl_lidar_perception copy.h  pcl_lidar_perception.h  pose.h
lidar_perception/launch/: lidar_perception.launch
lidar_perception/rviz/: lidar_perception.rviz
lidar_perception/src/: lidar_perception.cpp
planning/: CMakeLists.txt  package.xml
planning/config/: planning.yaml
planning/include/: rtk_data_path.h  rtk_data_path.h.in
planning/launch/: planning.launch
planning/rviz/: racecourse.rviz
planning/src/common/: CMakeLists.txt
planning/src/common/include/: coord_transformation.h  csv.h  planning_common.h  planning_math_tool.h  road.h  trajectory.h  trajectory_vis.h  vehicle.h
planning/src/common/src/: coord_transformation.cpp  csv.cpp  planning_common.cpp  planning_math_tool.cpp  road.cpp  trajectory.cpp  trajectory_vis.cpp  vehicle.cpp
planning/src/interface/: CMakeLists.txt
planning/src/interface/include/: interface_with_automsgs.h
planning/src/interface/src/: interface_with_automsgs.cpp
planning/src/longitudinal_planner/: CMakeLists.txt
planning/src/longitudinal_planner/include/: forward_backwar_v_planner.h
planning/src/longitudinal_planner/include/common/: longitudinal_common.h  longitudinal_module.h  longitudinal_test.h
planning/src/longitudinal_planner/src/: forward_backwar_v_planner.cpp
planning/src/longitudinal_planner/src/common/: longitudinal_common.cpp  longitudinal_module.cpp  longitudinal_test.cpp
planning/src/planning_node/: CMakeLists.txt
planning/src/planning_node/FSA/: CMakeLists.txt
planning/src/planning_node/FSA/include/: fsa_planning.h  fsa_planning_node.h  fsa_racetrack_planning.h  fsa_skidpad_planning.h  fsa_straight_planning.h
planning/src/planning_node/FSA/src/: fsa_planning.cpp  fsa_racetrack_planning.cpp  fsa_skidpad_planning.cpp  fsa_straight_planning.cpp
planning/src/planning_node/FSA/src/main/: fsa_planning_node.cpp  racetrack_node.cpp  skidpad_node.cpp  straight_node.cpp
planning/src/planning_node/FSA/src/old version/: main.cpp  planning.cpp  planning_handle.cpp
planning/src/planning_node/include/: planning_core.h
planning/src/planning_node/src/: planning_core.cpp
planning/src/smoother/: CMakeLists.txt
planning/src/smoother/include/: iterative_polynomial_smoother.h  polygonal_line.h
planning/src/smoother/include/common/: smoother_common.h  smoother_module.h  smoother_test.h
planning/src/smoother/src/: iterative_polynomial_smoother.cpp  polygonal_line.cpp
planning/src/smoother/src/common/: smoother_common.cpp  smoother_module.cpp  smoother_test.cpp
(+11 files in other folders)
